err/subnetviz.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Subnetviz-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/subnetviz'...
Compiling './lib/python3.5/site-packages/subnetviz/address_utils.py'...
***   File "./lib/python3.5/site-packages/subnetviz/address_utils.py", line 15
    ipv4_net = (0x00000000000000000000FFFF00000000L, 96)
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/subnetviz/format'...
Compiling './lib/python3.5/site-packages/subnetviz/format/__init__.py'...
***   File "./lib/python3.5/site-packages/subnetviz/format/__init__.py", line 60
    raise ValueError, ("%s instances do not have normal network "
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/subnetviz/network.py'...
***   File "./lib/python3.5/site-packages/subnetviz/network.py", line 50
    raise ValueError, \
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
